[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubika-bot-api"
version = "1.0.2"
authors = [
  { name="rubika api bot", email="0x01101101@proton.me" },
]
description = "A powerful asynchronous/synchronous library for Rubika Bot API with a focus on high performance."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp",
    "aiofiles",
    "requests",
    "pytz",
]

license = "MIT" # Correct: This defines the project's license

[project.urls]
"Homepage" = "https://github.com/rubika-bot-api/rubika_bot_api" # UPDATED URL
"Bug Tracker" = "https://github.com/rubika-bot-api/rubika_bot_api/issues" # UPDATED URL
"Documentation" = "https://github.com/rubika-bot-api/rubika_bot_api/blob/main/README.md" # UPDATED URL